Fix tag overflow issue on theme search page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -281,7 +281,7 @@ Remove if a better way is found to achieve this.*/
 
 .Theme-Explorer-Heading {
   width: 100%;
-  height: 24px;
+  height: auto;
   font-family: 'Droid Serif'; 
   font-size: 20px;
   color: #2980b9;
